# device-sdk

./: .gitignore  README.md
docs/: cometa-api.html  cometa.apib
linux/: Makefile  Makefile.am  README.md  bootstrap  configure.ac
linux/samples/: Makefile.am  cometa-client.c
linux/src/: Makefile.am  libcometa.c  libcometa.h
python/: README.md  cometa-client.py  cometa.py
